결제라인 추가

--- a/src/components/CartViewItem/CartViewItem.module.scss
+++ b/src/components/CartViewItem/CartViewItem.module.scss
@@ -87,3 +87,11 @@
 .last-column {
   text-align: center;
 }
+
+.cancel-button {
+  @include custom-button(
+    $backgroundColor: $color-lightred,
+    $activeBackgroundColor: $color-red
+  );
+  padding: 4px;
+}
