--- a/src/pages/Layout/Header.module.scss
+++ b/src/pages/Layout/Header.module.scss
@@ -7,28 +7,35 @@
   top: 0;
   left: 0;
   right: 0;
-  min-height: $header-height;
+  height: $header-height;
   z-index: 1000;
 }
 
 .header__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  padding: 0 10px;
+  position: relative;
+  height: 100%;
 }
 
 .header__left {
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
   display: flex;
 }
 
 .header__center {
-  flex: 1;
-  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .header__right {
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
   display: flex;
 }
 
