--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -83,3 +83,18 @@
     $activeBackgroundColor: red
   );
 }
+
+.virtual_info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px ;
+  padding: 15px;
+  background-color: $color-red;
+  box-shadow: 0px 0px 4px rgba($color: $color-blue, $alpha: 0.8);
+}
+
+.virtual_info__title{ 
+  text-align: center;
+  font-weight: bold;
+  color: $color-darkblue3;
+}
