--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -1,8 +1,7 @@
 @import '../../config/variables';
 
 .orders-container {
-  margin: 15px 5px 5px;
-  height: auto;
+  margin: 15px 10px;
 }
 
 .order-text {
