--- a/src/pages/Orders/OrdersPage.module.scss
+++ b/src/pages/Orders/OrdersPage.module.scss
@@ -1,4 +1,5 @@
 @import '../../config/variables';
+
 .main {
   display: flex;
   flex-direction: column;
@@ -8,5 +9,28 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 0;
+  grid-row-gap: 0;
+  grid-template-rows: repeat(auto-fill, max-content);
 }
 
+@media (min-width:768px) {
+  .order-ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width:1200px) {
+  .order-ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width:1530px) {
+  .order-ul {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
