errorBoundary 및 에러페이지 관련 작업

--- a/src/components/CartButton/CartButton.module.scss
+++ b/src/components/CartButton/CartButton.module.scss
@@ -3,7 +3,7 @@
 .items-count {
   position: absolute;
   top: 4px;
-  right: 0;
+  left: 20px;
   min-width: 25px;
   padding: 2px 5px;
   border-radius: 50px;
