--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -5,16 +5,13 @@
 }
 
 .select-mode {
-  position: absolute;
-  display: flex;  
-  justify-content: space-evenly;
-  text-align: center;  
-  bottom: 0%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  text-align: center;
+
   a {
+    display: inline-block;
     width: 5rem;
     font-size: $font-size-level2;
+    margin-top: 10px;
     padding: 4px;
     color: $color-gray;
     text-decoration: none;
@@ -29,7 +26,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem 0;
+  padding: 3rem 0 1rem 0;
+
   h2 {
     margin: 0;
     color: $color-blue;
@@ -57,4 +55,16 @@
   margin-top: 10px;
   height: 36px;
   @include blue-button;
+}
+
+.password {
+  margin-top: 4px !important;
+}
+
+.signup {
+  font-size: $font-size-level2;
+  margin-top: 10px;
+  text-align: center;
+  text-decoration: none;
+  color: $color-blue;
 }
