--- a/src/components/Login/LoginMsgCard/LoginMsgCard.module.scss
+++ b/src/components/Login/LoginMsgCard/LoginMsgCard.module.scss
@@ -9,17 +9,26 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
+}
+
+.separator {
+  margin: 6px;
+  width: 100%;
+  height: 1px;
+  background-color: rgba($color: $color-gray, $alpha: 0.3);
 }
 
 .title {
-  font-weight: bold;
-  color: $color-blue; 
+  font-size: 1rem;
+  color: $color-blue;
+
   &.error {
     color: $color-red;
   }
 }
 
 .message {
-  margin: 4px;
+  margin-left: 8px;
+  font-weight: bold;
 }
