--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -2,15 +2,16 @@
 
 .item {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-width: 23rem;
+  flex-direction: column;
+  align-items: left;
+  list-style: none;
+  min-width: 10rem;
   border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-  padding: 4px 10px;
+  box-shadow: 0px 2px 4px rgba($color: $color-darkblue3, $alpha: .5);
+  padding: 14px 10px;
   background-color: white;
   margin: 10px;
-
+  min-width: 12rem;
   transition: transform 0.1s;
 
   &:hover {
@@ -18,23 +19,17 @@
   }
 }
 
-.cost {
-  background-color: $color-blue;
-  border-radius: 4px;
-  min-width: 6rem;
-  text-align: right;
-  padding: 5px;
-  margin: 0;
-  color: whitesmoke;
-  font-weight: bold;
-}
-
-.item__name{
-  margin: 10px 0;
-}
-
-.item__unit{
+.item__name {
+  color: $color-darkblue3;
   margin-bottom: 10px;
+}
+
+.item__unit {
   font-size: $font-size-level2;
   color: $color-gray;
+}
+
+.cost {
+  color: $color-lightred;
+  font-weight: bold;
 }
