--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -10,8 +10,45 @@
 .products-grid ul {
   margin: 0;
   padding: 10px 20px;
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
   width: 100%;
   justify-content: center;
+
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 0;
+  grid-row-gap: 0;
+  grid-template-rows: repeat(auto-fill, max-content);
+}
+
+@media (min-width:470px) {
+  .products-grid ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width:768px) {
+  .products-grid ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width:940px) {
+  .products-grid ul {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width:1200px) {
+  .products-grid ul {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media (min-width:1530px) {
+  .products-grid ul {
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
