--- a/src/ui/Backdrop/Backdrop.module.scss
+++ b/src/ui/Backdrop/Backdrop.module.scss
@@ -1,8 +1,11 @@
+@import '../../config/variables';
+
 .backdrop {  
   position: fixed;
-  top: 0;
+  top: $header-height;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 9998;
+  z-index: 1000;
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
