--- a/src/ui/Backdrop/Backdrop.module.scss
+++ b/src/ui/Backdrop/Backdrop.module.scss
@@ -2,10 +2,16 @@
 
 .backdrop {  
   position: fixed;
-  top: $header-height;
+  top: 0px;
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1000;
+  z-index: 1001;
   background-color: rgba($color: #000000, $alpha: 0.5);
+}
+
+@media (min-width: 768px){
+  .backdrop{
+    // top: $header-height;
+  }
 }
