--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -2,6 +2,10 @@
 
 .orders-container {
   margin: 15px 10px;
+  height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .order-text {
@@ -24,7 +28,9 @@
 }
 
 .order-body-wrapper {
+  flex: 1;
   padding: 15px;
+  overflow: auto;
 
   ul {
     list-style: none;
@@ -67,32 +73,42 @@
 .label-text {
   display: flex;
   justify-content: space-between;
+
   .label {
     width: 80px;
     font-weight: bold;
   }
 }
 
+.reorder-button,
 .cancel-button {
   width: 100%;
   height: 38px;
   margin-top: 10px;
-  @include custom-button(
-    $backgroundColor: $color-lightred,
-    $activeBackgroundColor: red
-  );
+}
+
+.cancel-button {
+  @include custom-button($backgroundColor: $color-lightred,
+    $activeBackgroundColor: red);
+}
+
+.reorder-button {
+  @include custom-button($backgroundColor: white,
+    $activeBackgroundColor: Azure,
+    $color : $color-darkgreen,
+    $borderColor: $color-green);
 }
 
 .virtual_info {
   display: flex;
   flex-direction: column;
-  margin-top: 10px ;
+  margin-top: 10px;
   padding: 15px;
   background-color: $color-red;
   box-shadow: 0px 0px 4px rgba($color: $color-blue, $alpha: 0.8);
 }
 
-.virtual_info__title{ 
+.virtual_info__title {
   text-align: center;
   font-weight: bold;
   color: $color-darkblue3;
