어드민 페이지 기본 틀 제작

--- a/src/components/OrderGroup/OrderGroup.module.scss
+++ b/src/components/OrderGroup/OrderGroup.module.scss
@@ -1,8 +1,9 @@
 @import '../../config/variables';
 
 .orders-container {
-  margin: 15px 10px;
-  height: 25rem;
+  // margin: 15px 10px;
+  height: 100%;
+  // height: 25rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
