--- a/src/config/_variables.scss
+++ b/src/config/_variables.scss
@@ -13,6 +13,7 @@ $color-darkblue2: #0053b3;
 $color-darkblue3: #00397a;
 $color-blue: #297ad6;
 $color-lightskyblue: #b8d7fa;
+$color-skyblue: #97C3F0;
 $color-lightblue: #77a4d8;
 $color-lightgray: #f7f7f7;
 $color-gray: rgb(128, 128, 128);
