--- a/src/Layout/AdminLayout/Header/AdminHeader.module.scss
+++ b/src/Layout/AdminLayout/Header/AdminHeader.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  box-shadow: 1px 2px 4px rgba($color: #000000, $alpha: 0.1);
   .center {
     position: absolute;
     left: 50%;
