--- a/src/ui/Backdrop/Backdrop.module.scss
+++ b/src/ui/Backdrop/Backdrop.module.scss
@@ -1,11 +1,22 @@
 @import '../../config/variables';
 
-.backdrop {  
+.backdrop {
   position: fixed;
   top: 0px;
   left: 0;
   width: 100vw;
   height: 100vh;
   z-index: 1001;
-  background-color: rgba($color: #000000, $alpha: 0.5);
+  background-color: black;
+  animation: ani 0.3s ease-in forwards;
+}
+
+@keyframes ani {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 0.5;
+  }
 }
