--- a/src/ui/DateRangePicker/DateRangePicker.module.scss
+++ b/src/ui/DateRangePicker/DateRangePicker.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-around;
   padding: 3px 2px 5px 2px;
-  background-color: white;
+  background-color: transparent;
   border: 1px solid $color-skyblue;
   border-radius: 4px;
   margin-left: 4px;
