--- a/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
+++ b/src/components/Admin/AdminOrderItem/AdminOrderItem.module.scss
@@ -8,7 +8,7 @@ $label-color: rgb(197, 229, 248);
   display: grid;
   width: 100%;
   margin: 10px 0;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   background-color: $back-color;
   border-radius: 4px;
   box-shadow: 1px 2px 4px rgba($color: #000000, $alpha: 0.1);
@@ -16,7 +16,7 @@ $label-color: rgb(197, 229, 248);
 }
 
 .header {
-  grid-column: 1 / 3;
+  grid-column: 1 / 2;
   background-color: $header-color;
 
   .web_mark {
@@ -80,6 +80,7 @@ $label-color: rgb(197, 229, 248);
 }
 
 $min-widths: (
+  380px: 2,
   768px: 3,
   1000px: 4,
   1150px: 5,
@@ -87,7 +88,8 @@ $min-widths: (
   1450px: 7,
 );
 
-@each $width, $columnCount in $min-widths {
+@each $width,
+$columnCount in $min-widths {
   @media (min-width: $width) {
     .list_item {
       grid-template-columns: repeat($columnCount, 1fr);
